don't call jquery UI methods an elements with no widget initialized
aka: no more .dialog('close').dialog({}).dialog('open')
(does not actually change any behavior visible to end user)

test plan:

as far as manual testing goes, try to go to a bunch of pages that have dialogs
and open and close them.

For engineers, if you can think of other places where we might try to set options
on a UI widget before we initialize one (like sortables or something), check that too.

Change-Id: I7415c00d8c15b562ac12eeef83fa041aff1dfb35
Reviewed-on: https://gerrit.instructure.com/12810
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/views/account_authorization_configs/_ldap_settings_test.html.erb
+++ b/app/views/account_authorization_configs/_ldap_settings_test.html.erb
@@ -106,11 +106,10 @@ require([
 
   function testLDAP() {
     clearTestLDAP();
-    $("#test_ldap_dialog").dialog('close').dialog({
-      autoOpen: false,
+    $("#test_ldap_dialog").dialog({
       title: <%= jt('#accounts.test_ldap_dialog_title', "Test LDAP Settings") %>,
       width: 500
-    }).dialog('open');
+    });
     <%= ldap_tests.first.js_function %>();
   }
   function clearTestLDAP() {
