--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -233,7 +233,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; margin-top: 10px;">
-            <a class='button' href="<%= oauth_url(:service => "google_docs", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.authorize_google_docs', "Authorize Google Docs Access") %></a>
+            <a class='button' href="<%= oauth_url(:service => "google_docs", :return_to => settings_profile_url) %>"><%= t('buttons.authorize_google_docs', "Authorize Google Docs Access") %></a>
           </div>
         </div>
       </li>
@@ -284,7 +284,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; font-size: 1.2em; margin-top: 10px;">
-            <a class="button" href="<%= oauth_url(:service => "facebook", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.register_facebook_account', "Register Your Facebook Account") %></a>
+            <a class="button" href="<%= oauth_url(:service => "facebook", :return_to => settings_profile_url) %>"><%= t('buttons.register_facebook_account', "Register Your Facebook Account") %></a>
           </div>
         </div>
       </li>
@@ -306,7 +306,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; font-size: 1.2em; margin-top: 10px;">
-            <a class="button" href="<%= oauth_url(:service => "linked_in", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.register_linkedin_account', "Register Your LinkedIn Account") %></a>
+            <a class="button" href="<%= oauth_url(:service => "linked_in", :return_to => settings_profile_url) %>"><%= t('buttons.register_linkedin_account', "Register Your LinkedIn Account") %></a>
           </div>
         </div>
       </li>
@@ -330,7 +330,7 @@ TEXT
             <div class="clear"></div>
           </div>
           <div style="text-align: center; margin-top: 10px;">
-            <a class="button" href="<%= oauth_url(:service => "twitter", :return_to => user_profile_url(@current_user)) %>"><%= t('buttons.authorize_twitter', "Authorize Twitter Access") %></a>
+            <a class="button" href="<%= oauth_url(:service => "twitter", :return_to => settings_profile_url) %>"><%= t('buttons.authorize_twitter', "Authorize Twitter Access") %></a>
           </div>
         </div>
       </li>
