allow disabling canvas auth for accounts with another auth source
disabling canvas auth also force-disables open registration, and
makes LDAP auth act like full delegated auth (CAS or SAML)

test plan:
 * configure LDAP, CAS, or SAML. MAKE SURE YOU CAN LOG IN.
 * go to account settings, and disable "Canvas Authentication"
 * open registration should no longer show up on account settings
   page (after saving)
 * ensure you can no longer log in with your Canvas credentials, but
   you can with LDAP, CAS, or SAML credentials.
 * remove LDAP, CAS, or SAML from the account
 * "Canvas Authentication" should no longer show up on the account
   settings page, open registration should
 * your Canvas credentials should start working again
 * add LDAP, CAS, or SAML back
 * "Canvas Authentication" should be back on in account settings

Change-Id: Ic7475623e5139bb545a87d8e5b1014dabaf4e854
Reviewed-on: https://gerrit.instructure.com/12850
Reviewed-by: Jeremy Stanley <jeremy@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/account_authorization_configs/index.html.erb
+++ b/app/views/account_authorization_configs/index.html.erb
@@ -44,12 +44,14 @@
 </p>
 <% end %>
 
-<p>
-  <%= mt(:canvas_login_tip, "If you configure settings that cause you to not be able to log in you can add
-  *%{url1}* to the end of your login url. This will let you login
-  using the normal Canvas login procedure. For this account the url would be %{url2}",
-  :url1 => "?canvas_login=1", :url2 => "http://#{@account.domain}/login?canvas_login=1") %>
-</p>
+<% if @account.canvas_authentication? && !@account.ldap_authentication? %>
+  <p>
+    <%= mt(:canvas_login_tip, "If you configure settings that cause you to not be able to log in you can add
+*%{url1}* to the end of your login url. This will let you login
+using the normal Canvas login procedure. For this account the url would be %{url2}",
+    :url1 => "?canvas_login=1", :url2 => "http://#{@account.domain}/login?canvas_login=1") %>
+  </p>
+<% end %>
 
 <h3><%= t(:current_settings_title, "Current Integration") %></h3>
 
