--- a/app/views/accounts/settings.html.erb
+++ b/app/views/accounts/settings.html.erb
@@ -201,20 +201,28 @@
                   <%= settings.check_box :global_includes, :checked => @account.settings[:global_includes] %>
                   <%= settings.label :global_includes, :en => "Global CSS/JavaScript includes" %>
                 </div>
-              <% end %>
-              <div>
-                <%= settings.check_box :open_registration, :checked => @account.open_registration? %>
-                <%= settings.label :open_registration, :en => "Open Registration" %>
-                <% if @account.delegated_authentication? %>
-                  <%= link_to(image_tag('warning.png'), '#', :class => 'open_registration_delegated_warning_link no-hover', :title => t(:open_registration_delegated_warning_tooltip, "An External Identity Provider is Enabled")) %></legend>
-
-                  <div id="open_registration_delegated_warning_dialog" style="display: none;">
-                      <%= t(:open_registration_delegated_warning_message,
-                      "An external identity provider is enabled, and users created via open registration may not be able to log in unless
-                      the external identity provider's login form has a link back to %{url}.", :url => login_url(:canvas_login => 1)) %>
+                <% if @account.account_authorization_config %>
+                  <div>
+                    <%= settings.check_box :canvas_authentication, :checked => @account.canvas_authentication? %>
+                    <%= settings.label :canvas_authentication, :en => "Canvas Authentication" %>
                   </div>
                 <% end %>
-              </div>
+              <% end %>
+              <% if @account.canvas_authentication? %>
+                <div>
+                  <%= settings.check_box :open_registration, :checked => @account.open_registration? %>
+                  <%= settings.label :open_registration, :en => "Open Registration" %>
+                  <% if @account.delegated_authentication? %>
+                    <%= link_to(image_tag('warning.png'), '#', :class => 'open_registration_delegated_warning_link no-hover', :title => t(:open_registration_delegated_warning_tooltip, "An External Identity Provider is Enabled")) %></legend>
+
+                    <div id="open_registration_delegated_warning_dialog" style="display: none;">
+                        <%= t(:open_registration_delegated_warning_message,
+                        "An external identity provider is enabled, and users created via open registration may not be able to log in unless
+                        the external identity provider's login form has a link back to %{url}.", :url => login_url(:canvas_login => 1)) %>
+                    </div>
+                  <% end %>
+                </div>
+              <% end %>
               <div>
                 <%= settings.check_box :users_can_edit_name, :checked => @account.settings[:users_can_edit_name] != false %>
                 <%= settings.label :users_can_edit_name, :en => "Users can edit display name" %>
