show unused tabs on course settings page
fixes #9886

there was a css conflict which caused the unused left nav bar tabs to be hidden
on the course settings page.  this made the page inconsistent with other course
pages, when viewing as a teacher/admin.

test plan:
- go to a course settings page
- make sure both used + unused tabs show up

Change-Id: I1671dcbc8aefd9ba58295b1912e651032469ab8d
Reviewed-on: https://gerrit.instructure.com/12866
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/views/courses/_settings_sidebar.html.erb
+++ b/app/views/courses/_settings_sidebar.html.erb
@@ -70,7 +70,7 @@
       <%= t('links.reset', 'Reset Course Content') %>
     <% end %>
 
-    <div class="hidden" id="reset_course_content_dialog">
+    <div <%= hidden(true) %> id="reset_course_content_dialog">
       <%= mt('help.reset_course_content', 'Resetting course content will permanently delete all associated assignments, discussions, quizzes, modules, rubrics, pages, files, learning outcomes, question banks, collaborations, conferences, or any other content. This action is irreversible, and the data *cannot* be recovered. Are you sure you wish to continue?') %>
 
       <% form_for @context, :url => context_url(@context, :course_reset_url), :html => { :method => :post } do %>
