capture enrollment type during signup, closes #9896
store whether the new user is a teacher/student/observer (if specified)

test plan:
1. sign up as a teacher/student/observer
2. it should work
3. the user record should have the correct initial_enrollment_type

Change-Id: I6200d677f2da946b05d6f90c89617b3476ed390b
Reviewed-on: https://gerrit.instructure.com/12873
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Simon Williams <simon@instructure.com>

--- a/app/views/jst/registration/studentHigherEdDialog.handlebars
+++ b/app/views/jst/registration/studentHigherEdDialog.handlebars
@@ -28,7 +28,7 @@
     </div>
     <div class="control-group">
       <div class="controls">
-        <input type="hidden" name="enrollment_type" value="student">
+        <input type="hidden" name="user[initial_enrollment_type]" value="student">
         <button class="button btn-primary" type="submit">{{#t "buttons.start_learning"}}Start Learning{{/t}}</button>
       </div>
     </div>
