--- a/app/views/jst/registration/teacherDialog.handlebars
+++ b/app/views/jst/registration/teacherDialog.handlebars
@@ -22,7 +22,7 @@
     </div>
     <div class="control-group">
       <div class="controls">
-        <input type="hidden" name="enrollment_type" value="teacher">
+        <input type="hidden" name="user[initial_enrollment_type]" value="teacher">
         <button class="button btn-primary" type="submit">{{#t "buttons.start_teaching"}}Start Teaching{{/t}}</button>
       </div>
     </div>
