--- a/app/views/jst/registration/parentDialog.handlebars
+++ b/app/views/jst/registration/parentDialog.handlebars
@@ -34,7 +34,7 @@
     </div>
     <div class="control-group">
       <div class="controls">
-        <input type="hidden" name="enrollment_type" value="observer">
+        <input type="hidden" name="user[initial_enrollment_type]" value="observer">
         <button class="button btn-primary" type="submit">{{#t "buttons.start_participating"}}Start Participating{{/t}}</button>
       </div>
     </div>
