--- a/app/views/account_authorization_configs/_ldap_settings.html.erb
+++ b/app/views/account_authorization_configs/_ldap_settings.html.erb
@@ -44,13 +44,30 @@
     <%= render :partial => 'ldap_timeout_error', :locals => { :account_config => @account_configs[1] } %>
     <tr>
       <th><%= before_label(t(:auth_type_label, "Type")) %></th>
-      <th><%= t(:secondary_ldap_label, "Secondary LDAP") %> <a href="#" class="auth_form remove_secondary_ldap_link"><%= t(:remove_secondary_ldap_link, "(Remove)") %></a></th>
+      <th><%= t(:secondary_ldap_label, "Secondary LDAP") %><% unless @account_configs.length > 2 %> <a href="#" class="auth_form remove_secondary_ldap_link"><%= t(:remove_secondary_ldap_link, "(Remove)") %></a><% end %></th>
     </tr>
     <% fields_for @account_configs[1], :index => 1 do |f| %>
       <%= f.hidden_field :disabled, :value => @account_configs[1].ldap_authentication? ? '0' : '1', :id => 'secondary_ldap_config_disabled' %>
       <%= render :partial => 'ldap_settings_fields', :locals => { :f => f, :account_config => @account_configs[1] } %>
     <% end %>
   </table>
+
+  <% if @account_configs.length > 2 %>
+    <% @account_configs[2..-1].each_with_index do |aac, i| %>
+      <% next unless aac.ldap_authentication? %>
+      <table class="formtable ldap_secondary" style="margin-left: 20px; margin-top: 20px;">
+        <%= render :partial => 'ldap_timeout_error', :locals => { :account_config => aac } %>
+        <tr>
+          <th><%= before_label(t(:auth_type_label, "Type")) %></th>
+          <th><%= t(:secondary_ldap_label, "Secondary LDAP") %></th>
+        </tr>
+        <% fields_for aac, :index => i + 2 do |f| %>
+          <%= f.hidden_field :disabled, :value => '0' %>
+          <%= render :partial => 'ldap_settings_fields', :locals => { :f => f, :account_config => aac } %>
+        <% end %>
+      </table>
+    <% end %>
+  <% end %>
 
   <span class="auth_form" style="margin-top: 15px;">
     <button type="submit" class="button"><%= t(:save_button, "Save LDAP Settings") %></button>
