don't display end course btn for courses in soft-concluded terms.
fixes #9872

on the course settings page, the 'end this course' button should not
display for courses whose terms have already ended.

test plan:
  * create a course inside of a term whose end_at date has already
    passed;
  * visit the course settings page and verify that the 'end this course'
    button is not visible in the sidebar.

Change-Id: I8f8ddc1cd495a3488fda6989de28d45abd67b6cd
Reviewed-on: https://gerrit.instructure.com/12893
Reviewed-by: Cody Cutrer <cody@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/courses/_settings_sidebar.html.erb
+++ b/app/views/courses/_settings_sidebar.html.erb
@@ -28,7 +28,7 @@
           <%= t('buttons.unconclude', 'Un-Conclude Course') %>
         </button>
       <% end %>
-    <% elsif @context.end_at.nil? || @context.end_at > Time.now %>
+    <% elsif !@context.soft_concluded? %>
       <% link_to context_url(@context, :context_confirm_action_url, :event => 'conclude'), :class => 'button button-sidebar-wide' do %>
         <%= image_tag 'delete.png' %>
         <%= t('links.conclude', 'End this Course') %>
