change each buttons text align under unregistered services
fixes #9878

test plan:
  1. go to any users profile page
  2. notice under unregistered services
     each buttons text align is left instead
     of center

Change-Id: I27f93d3a17c832c16df9afea43cbcc6d9aadc48a
Reviewed-on: https://gerrit.instructure.com/12900
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Bryan Madsen <bryan@instructure.com>

--- a/app/stylesheets/profile/edit.sass
+++ b/app/stylesheets/profile/edit.sass
@@ -36,6 +36,9 @@
 #unregistered_services .button img 
   vertical-align: middle
 
+#unregistered_services .service a
+  text-align: left
+
 .profile_pic_link img 
   max-width: 50px
 
