--- a/app/views/profile/communication.html.erb
+++ b/app/views/profile/communication.html.erb
@@ -17,5 +17,15 @@
 
 <h2><%= t('headers.notification_preferences', 'Notification Preferences') %><i id="notifications_save_status"></i></h2>
 
+<% unless @current_user.registered? %>
+  <p class="alert alert-info">
+    <%= t "confirm_email_instructions", <<-TEXT, :email => @current_user.email, :wrapper => {'*' => '<a href="' + re_send_confirmation_path(@current_user, @current_user.communication_channel) + '" class="re_send_confirmation_link">\1</a>'}
+      Before you can receive any notifications, you need to verify your email address (%{email}) by clicking the link in the email we sent you.
+      If you don't see it, *click to re-send the email*, and make sure to check your spam box.
+    TEXT
+    %>
+  </p>
+<% end %>
+
 <div id='notification-preferences'>
 </div>
