--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -552,7 +552,7 @@ TEXT
   <p class="alert alert-info">
     <%= t "confirm_email_instructions", <<-TEXT, :email => @current_user.email, :wrapper => {'*' => '<a href="' + re_send_confirmation_path(@current_user, @current_user.communication_channel) + '" class="re_send_confirmation_link">\1</a>'}
       Before you can edit your profile, you need to verify your email address (%{email}) by clicking the link in the email we sent you.
-      If you don't see it, *re-send the email*, and make sure to check your spam box.
+      If you don't see it, *click to re-send the email*, and make sure to check your spam box.
     TEXT
     %>
   </p>
