--- a/app/views/account_authorization_configs/_ldap_settings_fields.html.erb
+++ b/app/views/account_authorization_configs/_ldap_settings_fields.html.erb
@@ -56,6 +56,18 @@
   </td>
 </tr>
 <tr>
+  <td style="vertical-align: top; width: 200px;"><%= f.blabel :identifier_format, :en => "Login ID Attribute" %></td>
+  <td style="vertical-align: top;" class="nobr">
+    <%= f.text_field :identifier_format, :class => "auth_form", :style => "width: 300px;" %>
+    <span class="auth_info identifier_format"><%= account_config.identifier_format %></span>
+    <span class="auth_form" style="font-size: smaller;">
+      <br>
+      <%= t(:identifer_format_description,
+             "The LDAP attribute to use to look up the Canvas login. Leave blank to use the username supplied by the user.") %>
+    </span>
+  </td>
+</tr>
+<tr>
   <td style="vertical-align: top; width: 200px;"><%= f.blabel :auth_username, :en => "Username" %></td>
   <td style="vertical-align: top;" class="nobr">
     <%= f.text_field :auth_username, :class => "auth_form", :style => "width: 300px;" %>
