fix ui-icon-info background image
test plan:
1. go to the style guide or some place that uses the ui-icon-info class
2. it should have the blue info icon

Change-Id: I3c16e7add2d444982fc010f1dbc833a7f6749db4
Reviewed-on: https://gerrit.instructure.com/12912
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/jqueryui/_jquery.ui.theme.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.theme.scss
@@ -229,8 +229,7 @@
 .ui-icon-video { background-position: -224px -128px; }
 .ui-icon-script { background-position: -240px -128px; }
 .ui-icon-alert { background-position: 0 -144px; }
-//.ui-icon-info { background-position: -16px -144px; }
-.ui-icon-info { background: url(images/icon_sprite.png) 0 0 no-repeat !important; }
+.ui-icon-info { background: url(/images/jqueryui/icon_sprite.png) 0 0 no-repeat !important; }
 .ui-icon-notice { background-position: -32px -144px; }
 .ui-icon-help { background-position: -48px -144px; }
 .ui-icon-check { background-position: -50px -546px; }
