--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -1,7 +1,44 @@
 @import environment.sass
 
-div.question
-  border-radius: 3px
+$backgroundColor: #dfe9f0
+$borderColor: #AAA
+$questionHeaderBackground: #F5F5F5
+
+div#content
+  overflow: visible
+  padding: 0
+
+#right-side-wrapper
+  position: absolute
+
+.quiz-header
+  border-bottom: 1px solid #a4a4a4
+  overflow: hidden
+  padding: 16px
+
+.quiz-submission, .question_editing
+  background: $backgroundColor
+  border: 1px solid #fff
+  padding: 16px
+
+.question_editing .question_holder
+  overflow: hidden
+
+.question_editing.brief
+  min-height: 80px
+
+.add_question
+  border: none
+
+#submit_quiz_form
+  .question_holder
+    overflow: hidden
+  .button-container
+    padding-right: 10%
+
+#submit_quiz_form, .question_form
+  .button-container
+    text-align: right
 
 #sort_questions
   :max-height 250px
@@ -15,47 +52,36 @@ div.question
   clear: both
   .question
     .header
-      :float right
-      :margin-right 20px
-      :font-size 1.0em
+      :background-color $questionHeaderBackground
     .answers
       .answer
+        clear: both
+        margin: 0 0 8px 0
+        position: relative
+        +opacity(0.5)
         &.correct_answer
           :background none
+          +opacity(1)
         &.selected_answer
-          :background url(/images/incorrect_answer.png) no-repeat 3px 5px
-        &.selected_answer.correct_answer
-          :background url(/images/correct_answer.png) no-repeat 3px 5px
-        &.selected_answer.unspecified_answer
-          :background url(/images/neutral_answer.png) no-repeat 3px 5px
+          +opacity(1)
+        &.wrong_answer,
+          +border-radius(6px)
+          border: 2px solid red
+          padding-bottom: 8px
+          +opacity(1)
+
+          .ui-selectmenu-status
+            :color red
+
+        &.full-opacity
+          +opacity(1)
         &.hide_right_arrow,&.selected_answer.hide_right_arrow
           :background-image none
+
     &.hover
       .answers
-        .answer.selected_answer.correct_answer
-          :background url(/images/correct_answer.png) no-repeat 3px 5px
-        .answer.selected_answer.unspecified_answer
-          :background url(/images/neutral_answer.png) no-repeat 3px 5px
-        .answer.correct_answer
-          :background url(/images/partial_answer.png) no-repeat 3px 5px
         .answer.hide_right_arrow,.answer.selected_answer.hide_right_arrow
           :background-image none
-    &.correct
-      :border-color #4a4
-    &.incorrect
-      :border-color #faa
-  .text_box_answer
-    color: #ab3636
-  .correct_text_box_answer
-    color: #44AA44
-#questions.assessment_results.survey_results
-  .question
-    .answers
-      .answer
-        &.selected_answer
-          :background url(/images/correct_answer.png) no-repeat 3px 5px
-        &.selected_answer.correct_answer
-          :background url(/images/correct_answer.png) no-repeat 3px 5px
     &.hover
       .answers
         .answer.selected_answer.correct_answer
@@ -68,25 +94,22 @@ div.question
       :border-color inherit
     &.incorrect
       :border-color inherit
-    .user_points,.question_points_holder
-      display: none
 
 #questions.assessing,#questions.assessment_results
   .question_holder
     .question
       &.related
         :border-width 2px
-      .header
-        :float right
-        :margin-right 10px
-        :font-size 0.9em
       .move
         :display none
 
 #questions.assessing
+  background: $backgroundColor
+  border: 1px solid #fff
+  padding: 16px
   .answer
     :padding 5px 5px
-    :margin 0 25px
+    :margin 0
 
     &:last-child
       :border-bottom 0
@@ -94,7 +117,7 @@ div.question
 #questions.brief 
   .question_holder .display_question
     :font-size 0.9em
-    .answer, .question_comment
+    .answer, .question_comment, .quiz_comment
       :display none
     .calculated_question_answers
       :display none
@@ -112,12 +135,10 @@ div.question
     :border-right 1px solid #aaa
     :border-left 1px solid #aaa
   .group_top
-    :border 1px solid #aaa
-    :border-bottom-width 1px
-    :-moz-border-radius-topright 5px
-    :-moz-border-radius-topleft 5px
-    :padding 5px 10px
-    :background-color #eee
+    border: 1px solid #aaa
+    padding: 5px 10px
+    overflow: hidden
+    background-color: #eee
     &.question_bank_top
       .local_group_links
         display: none
@@ -185,6 +206,18 @@ div.question
       .question_points_holder
         :display none
 
+.question_bank
+  border-bottom: 1px solid #b6babf
+  border-top: 1px solid #fff
+  overflow: hidden
+
+  &:first-child
+    border-top: none
+
+  &:last-child
+    border-bottom: none
+
+
 .question_holder 
   :position relative
   > .question
@@ -196,25 +229,24 @@ div.question
       white-space: pre-wrap
 
 .question
-  :border 1px solid #888
-  :margin-bottom 30px
-  :margin-top 0.7em
-  :-moz-border-radius 5px
+  :border 1px solid $borderColor
   :background-color #fff
   :position relative
   :min-height 50px
+  :min-width 415px
+  :width 80%
+  :margin 0.7em auto 30px auto
   :_height 10px
-  
+
   &.modified_but_not_saved
     border-width: 3px
   .move
-    :float left
-    :margin-top -0.8em
-    :_margin-top 0
-    :margin-left 20px
-    :width 16px
-    :height 16px
-    :padding 2px
+    background: none !important
+    float: left
+    margin: 8px 8px 0 8px
+    width: 16px
+    height: 16px
+    padding: 2px
  
     .move_icon
       :display none
@@ -222,19 +254,24 @@ div.question
   .header
     :font-size 1.2em 
     :font-weight bold
-    :float left
-    :background-color #fff
-    :margin-left 10px
-    :margin-top -0.7em
-    :_margin-top 0px
-    :padding 0px 3px
-
+    :border-bottom 1px solid $borderColor
+    :background-color $questionHeaderBackground
+    :padding 8px 20px
+    :margin 0
+    .question_points_holder
+      :float right
+      :font-size 0.9em
+      :font-weight bold
+      :color #777
+      :margin-top 0.1em
 
   .text
     :clear left
     :padding 5px 20px
     
     .question_text
+      :margin-top 1.5em
+      :margin-bottom 1.5em
       .answer_select
         :border 2px solid #888
       .text_after_answers
@@ -273,41 +310,12 @@ div.question
       .quiz_response_text
         word-wrap: break-word
       .answer
-        :padding 5px 30px
+        :padding 8px 30px 0 30px
 
         .answer_list
           :margin 5px
           :padding-left 0
           :font-weight bold
-
-        .answer_percent
-          :padding-left 20px
-          :font-size 0.8em
-          
-        .answer_comment_holder
-          :-moz-border-radius 5px
-          :border 2px solid #faa
-          :margin-left 20px
-          :padding 3px 5px
-          :margin-top 5px
-          :font-size 0.8em
-          :position relative
-          :float left
-          :width auto
-          :min-width 50px
-          
-          .answer_comment
-            :background-image none
-          
-          .comment_top
-            :position absolute
-            :display block
-            :top -8px
-            :left 10px
-            :width 19px
-            :height 8px
-            :background-repeat no-repeat
-            :background-image url(/images/comment_top.png)
 
         .answer_input
           :vertical-align top
@@ -325,16 +333,16 @@ div.question
             :border-color #abd
             .comment_top 
               :background-image url(/images/comment_top_neutral.png)
-        &.correct_answer
-          :background url(/images/correct_answer.png) no-repeat 3px 5px
-          
+
           .answer_text, .answer_html
-            :font-weight bold
+            :font-weight normal
             
           .answer_comment_holder
             :border-color #4a4
-            
-            .comment_top 
+            +vertical-gradient(#d7e7c9, #c3deac)
+
+
+            .comment_top
               :background-image url(/images/comment_top_correct.png)
 
         &.partial_answer
@@ -349,12 +357,6 @@ div.question
           .answer_text
             :font-weight bold
           
-          .answer_percent
-            color: #a00
-            
-        .answer_percent
-          :display none
-
   .question_comment
     :position relative
     :float left
@@ -382,35 +384,25 @@ div.question
       .comment_top
         :background-image url(/images/comment_top_correct.png)
   .links
-    :float right
-    :top 2px
-    :right 2px
-    :visibility hidden
-  .user_points
-    :float right
-    :margin-right 5px
-    :font-size 1.1em
-    :font-weight bold
-    :background-color #fff
-    .points_possible
-      :font-size 0.8em
-      :font-weight normal
+    float: right
+    margin: 8px 8px 0 0
+    visibility: hidden
   .flag_question
-    :float left
-    :margin-top -0.8em
-    :margin-left 20px
-    :width 20px
-    :height 20px
-    :padding 2px
+    :background url(/images/answers_sprite.png) -42px top
     :cursor pointer
-    .flag_icon
-      :display none
+    :position absolute
+    :left -30px
+    :margin-top 13px
+    :height 16px
+    :width 20px
+    +opacity(1)
+    &:hover
+      :background-position -62px top
+      +opacity(0.65)
   &.marked,&.marked:hover
     .flag_question
-      :background-color #fff
-      .flag_icon
-        :display inline
-        +opacity(1.0)
+      :background-position -62px -16px
+      +opacity(1)
   .no-touch &.hover
     .move
       :background-color #fff
@@ -421,12 +413,18 @@ div.question
     .flag_question
       :background-color #fff
       .flag_icon
-        +opacity(0.5)
+        +opacity(0.2)
         :display inline
 
-.question.multiple_choice_question, .question.multiple_answers_question, .question.matching_question
-  .answer
-    :border-bottom 1px solid #ddd
+.question
+  &.multiple_choice_question, &.multiple_answers_question,
+  &.matching_question, &.true_false_question
+    .answer
+      border-top: 1px solid #ddd
+
+.question.fill_in_multiple_blanks_question, .question.multiple_dropdowns_question
+  .answer_group
+    :border-top 1px solid #ddd
     &:last-child
       :border-bottom 0
 
@@ -444,17 +442,22 @@ div.question
     .answer_match_left, .answer_match_left_html
       :float left
       :width 45%
+      :font-weight bold
       :overflow auto
 
     .answer_match_middle
       :float left
       :width 10%
-      :background url(/images/matching_arrow.png) no-repeat center center
-            
+
     .answer_match_right
-      :float left
-      :width 45%
-      :overflow auto
+      float: left
+      width: 45%
+      .answer
+        border-top: none
+        .correct_answer
+          padding-left: 5px
+          .answer_text
+            font-weight: bold
 
 .form_answers
   .answer
@@ -480,19 +483,19 @@ div.question
     .answer_select .answer_box
       :background-repeat no-repeat
       :cursor pointer
-      &.hover .answer_box
-        :background-image url(/images/correct_answer.png)
         
     &.hover
       .answer_select .answer_box
         :background-image url(/images/partial_answer.png)
-    &.correct_answer .answer_select .answer_box
-      :background-image url(/images/correct_answer.png)
     &.partial_answer .answer_select .answer_box
       :background-image url(/images/partial_answer.png)
     &.negative_answer .answer_select .answer_box
       :background-image url(/images/negative_answer.png)
-.survey_quiz .question
+
+.skipped
+  display: none
+
+.survey_quiz .question, .question_holder
   .text
     .answers
       .answer
@@ -508,6 +511,10 @@ div.question
         
         &.negative_answer
           :background-image none
+
+        .answer_text, .answer_html
+          :display inline-block
+
   &.selectable
     .answer
       .answer_select
@@ -544,6 +551,8 @@ div.question
         :color inherit
   
 form.question_form
+  .question .header
+    overflow: hidden
   .multi_answer_sets
     display: none
   .fill_in_multiple_blanks_question,.multiple_dropdowns_question
@@ -890,3 +899,197 @@ ul#quiz_versions
 .multiple_answers_question .question_actions .atr-edit
   display: inline-block
 
+// styles for the correct/incorrect arrows on the quiz
+// review page.
+.answer_arrow
+  background-image: url(/images/answers_sprite.png)
+  background-repeat: repeat-x
+  display: inline-block
+  font-size: 12px
+  font-weight: bold
+  line-height: 27px
+  min-width: 96px
+  padding: 0 8px
+  position: absolute
+  text-align: center
+  text-shadow: 0 -1px 0 rgba(#000, 0.5)
+
+  &.correct:before, &.correct:after,
+  &.incorrect:before, &.incorrect:after,
+  &.info:before, &.info:after
+    background-image: url(/images/answers_sprite.png)
+    background-repeat: no-repeat
+    content: ' '
+    height: 27px
+    position: absolute
+    top: 0
+
+  &.correct:before, &.incorrect:before, &.info:before
+    left: -3px
+    width: 3px
+
+  &.correct:after, &.incorrect:after, &.info:after
+    right: -11px
+    width: 11px
+
+  &.correct
+    background-position: left -32px
+    color: #fff
+
+    &:before
+      background-position: top left
+
+    &:after
+      background-position: -9px top
+
+  &.incorrect
+    background-position: left -59px
+    color: #fff
+
+    &:before
+      background-position: -3px top
+
+    &:after
+      background-position: -20px top
+
+  &.info
+    background-position: left -86px
+    color: #333
+    text-shadow: 0 -1px 0 rgba(#fff, 0.5)
+
+    &:before
+      background-position: -6px top
+
+    &:after
+      background-position: -31px top
+
+// styles for teacher comments on quiz answers (comment bubbles).
+@mixin comment-arrow
+  border: 10px solid transparent
+  content: ' '
+  height: 0
+  position: absolute
+  width: 0
+
+.quiz_comment
+  +vertical-gradient(#fff, #f4f5f6)
+  border: 1px solid #b5bfc7
+  +border-radius(5px)
+  +box-shadow(0 1px 2px rgba(#000, 0.2))
+  font-size: 14px
+  min-width: 100px
+  padding: 14px
+  position: relative
+  margin: 16px 30px
+  text-align: left
+  display: inline-block
+
+  &.empty
+    display: none
+
+  p
+    margin-bottom: 0.5em
+    &:last-child
+      :margin-bottom 0
+
+  &:before
+    @include comment-arrow
+    border-bottom-color: #b5bfc7
+    left: 30px
+    top: -20px
+
+  &:after
+    @include comment-arrow
+    border-bottom-color: #fff
+    left: 30px
+    top: -19px
+
+.answer_comment_holder
+  :-moz-border-radius 5px
+  :border-radius 5px
+  :border 1px solid #faa
+  :margin-left 20px
+  :padding 5px
+  :margin-top 5px
+  :font-size 0.8em
+  :position relative
+  :float left
+  :width auto
+  :min-width 50px
+  +vertical-gradient(#ffeae7, #fdd7d7)
+
+  .answer_comment
+    :background-image none
+
+  .comment_top
+    :position absolute
+    :display block
+    :top -8px
+    :left 10px
+    :width 19px
+    :height 8px
+    :background-repeat no-repeat
+    :background-image url(/images/comment_top.png)
+
+.answers
+  .quiz_comment
+    font-size: 0.9em
+    margin: 16px 0 8px 0
+    padding: 5px 10px
+
+// quiz history-specific styles
+#update_history_form
+  .assessment_results
+    clear: none
+
+  .question .text
+    clear: none
+
+  .button-container
+    padding: 16px
+
+  #questions
+    .user_points, .question_points_holder
+      display: block
+
+  .header .question_points_holder
+    font-size: 12px
+    margin: 0
+
+  .question_input
+    width: 30px
+    &:focus
+      +transform(scale(1.3))
+
+  .short_answer_question
+    .answers
+      .question_input
+        font-size: 13px
+        width: 125px
+
+.summary .footnote
+  font-size: 12px
+  text-align: right
+
+.answer-group-heading
+  display: block
+  margin: 8px 0
+
+.answers_wrapper
+  position: relative
+
+.question, .answer
+  img
+    max-width: 100%
+
+#questions
+  .short_answer_question, .numerical_question
+    .answers_wrapper
+      border-top: 1px solid #ddd
+      padding-top: 8px
+      .answer
+        margin: 0 !important
+        padding-top: 0
+#questions.question_editing .question
+  .answers_wrapper
+    border-top: none
