--- a/app/views/question_banks/index.html.erb
+++ b/app/views/question_banks/index.html.erb
@@ -5,7 +5,7 @@
 <% content_for :stylesheets do %>
   <style>
   .question_bank {
-    margin-bottom: 10px;
+    padding-bottom: 10px;
   }
   .question_bank .header {
     padding: 3px 5px;
@@ -46,16 +46,18 @@
   </div>
 <% end %>
 
-<h2>
-  <% case @context.class.to_s %>
-    <% when 'Course' %>
-      <%= t 'course_question_banks', "Course Question Banks" %>
-    <% when 'User' %>
-      <%= t 'user_question_banks', "User Question Banks" %>
-    <% when 'Account' %>
-      <%= t 'account_question_banks', "Account Question Banks" %>
-  <% end %>
-</h2>
+<div class="quiz-header">
+  <h2>
+    <% case @context.class.to_s %>
+      <% when 'Course' %>
+        <%= t 'course_question_banks', "Course Question Banks" %>
+      <% when 'User' %>
+        <%= t 'user_question_banks', "User Question Banks" %>
+      <% when 'Account' %>
+        <%= t 'account_question_banks', "Account Question Banks" %>
+    <% end %>
+  </h2>
+</div>
 <% if @context != @current_user %>
   <%= render :partial => "question_bank" %>
 
