--- a/app/views/quizzes/_form_question.html.erb
+++ b/app/views/quizzes/_form_question.html.erb
@@ -9,30 +9,25 @@
 <form id="question_form_template" class="question_form" style="display: none;">
 <div class="question">
   <div class="header" style="background-color: transparent;">
-    <div style="float: left; background-color: #fff;">
-      <input type="text" style="width: 150px;" name="question_name"/>
-      <span class="question_points_holder">
-        <span style="padding-left: 20px;"><%= before_label :points, 'pts' %></span>
-        <input class="float_value" type="text" style="width: 25px;" name="question_points"/>
-      </span>
-    </div>
-    <div style="float: right; margin-right: 25px; margin-left: 25px; margin-top: 2px;">
-      <select class="question_type" name="question_type">
-        <option value="multiple_choice_question" style="padding: 2px;"><%= t('question_type.multiple_choice', "Multiple Choice") %></option>
-        <option value="true_false_question" style="padding: 2px;"><%= t('question_type.true_false', "True/False") %></option>
-        <option value="short_answer_question" style="padding: 2px;"><%= t('question_type.short_answer', "Fill In the Blank") %></option>
-        <option value="fill_in_multiple_blanks_question" style="padding: 2px;"><%= t('question_type.fill_in_multiple_blanks', "Fill In Multiple Blanks") %></option>
-        <option value="multiple_answers_question" style="padding: 2px;"><%= t('question_type.multiple_answers', "Multiple Answers") %></option>
-        <option value="multiple_dropdowns_question" style="padding: 2px;"><%= t('question_type.multiple_dropdowns', "Multiple Dropdowns") %></option>
-        <option value="matching_question" style="padding: 2px;"><%= t('question_type.matching', "Matching") %></option>
-        <option value="numerical_question" style="padding: 2px;"><%= t('question_type.numerical', "Numerical Answer") %></option>
-        <option value="calculated_question" style="padding: 2px;"><%= t('question_type.calculated', "Formula Question") %></option>
-        <option value="missing_word_question" style="padding: 2px;" class="missing_word"><%= t('question_type.missing_word', "Missing Word") %></option>
-        <option value="essay_question" style="padding: 2px;"><%= t('question_type.essay', "Essay Question") %></option>
-        <option value="text_only_question" style="padding: 2px;"><%= t('question_type.text_only', "Text (no question)") %></option>
-      </select>
-    </div>
-    <div class="clear"></div>
+    <input type="text" style="width: 150px;" name="question_name"/>
+    <select class="question_type" name="question_type">
+      <option value="multiple_choice_question" style="padding: 2px;"><%= t('question_type.multiple_choice', "Multiple Choice") %></option>
+      <option value="true_false_question" style="padding: 2px;"><%= t('question_type.true_false', "True/False") %></option>
+      <option value="short_answer_question" style="padding: 2px;"><%= t('question_type.short_answer', "Fill In the Blank") %></option>
+      <option value="fill_in_multiple_blanks_question" style="padding: 2px;"><%= t('question_type.fill_in_multiple_blanks', "Fill In Multiple Blanks") %></option>
+      <option value="multiple_answers_question" style="padding: 2px;"><%= t('question_type.multiple_answers', "Multiple Answers") %></option>
+      <option value="multiple_dropdowns_question" style="padding: 2px;"><%= t('question_type.multiple_dropdowns', "Multiple Dropdowns") %></option>
+      <option value="matching_question" style="padding: 2px;"><%= t('question_type.matching', "Matching") %></option>
+      <option value="numerical_question" style="padding: 2px;"><%= t('question_type.numerical', "Numerical Answer") %></option>
+      <option value="calculated_question" style="padding: 2px;"><%= t('question_type.calculated', "Formula Question") %></option>
+      <option value="missing_word_question" style="padding: 2px;" class="missing_word"><%= t('question_type.missing_word', "Missing Word") %></option>
+      <option value="essay_question" style="padding: 2px;"><%= t('question_type.essay', "Essay Question") %></option>
+      <option value="text_only_question" style="padding: 2px;"><%= t('question_type.text_only', "Text (no question)") %></option>
+    </select>
+    <span class="question_points_holder">
+      <span style="padding-left: 20px;"><%= before_label :points, 'pts' %></span>
+      <input class="float_value" type="text" style="width: 25px;" name="question_points"/>
+    </span>
   </div>
   <div class="links">
   </div>
@@ -203,8 +198,8 @@
     </div>
     <div class="clear"></div>
     <div class="button-container">
-      <button type="submit" class="button small-button submit_button"><%= t('buttons.create_update_question', "Create/Update Question") %></button>
-      <button type="button" class="button-secondary cancel_link"><%= t('#buttons.cancel', "Cancel") %></button>
+      <button type="button" class="button small-button cancel_link"><%= t('#buttons.cancel', "Cancel") %></button>
+      <button type="submit" class="button small-button submit_button btn-primary"><%= t('buttons.create_update_question', "Create/Update Question") %></button>
     </div>
   </div>
 </div>
