--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -110,9 +110,13 @@
     <% end %>
   <% end %>
 <% end %>
+
 <% js_bundle :quiz_show %>
 <% jammit_css :quizzes %>
-<a id="context_quzzes_url" style="display:none;" href="<%= context_url(@context, :context_quizzes_url) %>">&nbsp;<!-- needed by quiz_show.js --></a>
+
+<a id="context_quzzes_url" style="display:none;" href="<%= context_url(@context, :context_quizzes_url) %>">&nbsp;<!-- This is needed by quiz_show.js --></a>
+
+<header class="quiz-header">
 <h2 id="quiz_title"><%= @quiz.quiz_title || @quiz.readable_type %></h2>
 <% if @submission && params[:preview] %>
   <h3>
@@ -213,6 +217,7 @@
       </div>
     <% end %>
   <% end %>
+</header>
   <% if @submission && @submission.completed? %>
     <%= @quiz.assignment && @quiz.assignment.muted? ? render(:partial => "quizzes/muted") : render(:partial => "quizzes/quiz_submission") %>
   <% end %>
