use a simple dialog for creating new courses
this gets rid of the "getting started" workflow (with the 4
steps: name, assignments, students, save) and just uses a
simple dialog for creating new courses.  It is part of the new
user experience stuff.

refs: #9898

test plan:
click "create a new course" on dashboard, make sure
it works.

Change-Id: If1b28f3dd58fa40e3a0c0195dc5db97292566e7e
Reviewed-on: https://gerrit.instructure.com/13003
Reviewed-by: Jon Jensen <jon@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -25,7 +25,11 @@
   <% end %>
   <% if show_user_create_course_button(@current_user) %>
   <div class="rs-margin-lr">
-    <a href="<%= getting_started_path(:fresh => 1) %>" id="start_new_course" class="button button-sidebar-wide"><%= t('start_new_course', 'Start a New Course') %></a>
+    <button type="button"
+            id="start_new_course"
+            class="element_toggler button button-sidebar-wide"
+            aria-controls="new_course_form"><%= t('start_new_course', 'Start a New Course') %></button>
+    <%= render :partial => 'shared/new_course_form' %>
   </div>
   <% end %>
 <% end %>
