--- a/app/views/account_authorization_configs/_ldap_settings_fields.html.erb
+++ b/app/views/account_authorization_configs/_ldap_settings_fields.html.erb
@@ -18,8 +18,22 @@
 <tr>
   <td style="vertical-align: top; width: 200px;"><%= f.blabel :auth_over_tls, :en => "Over TLS?" %></td>
   <td style="vertical-align: top;" class="nobr">
-    <%= f.check_box :auth_over_tls, :class => "auth_form" %>
-    <span class="auth_info auth_over_tls"><%= account_config.auth_over_tls %></span>
+    <%= f.radio_button :auth_over_tls, 'start_tls', :class => "auth_form" %>
+    <%= f.label :auth_over_tls_start_tls, :auth_over_tls_start_tls, :en => "StartTLS", :class => "auth_form" %>
+    <%= f.radio_button :auth_over_tls, 'simple_tls', :class => "auth_form" %>
+    <%= f.label :auth_over_tls_simple_tls, :auth_over_tls_simple_tls, :en => "Simple TLS", :class => "auth_form" %>
+    <%= f.radio_button :auth_over_tls, 'false', :class => "auth_form", :checked => !account_config.auth_over_tls %>
+    <%= f.label :auth_over_tls_false, :auth_over_tls_false, :en => "No TLS", :class => "auth_form" %>
+    <span class="auth_info auth_over_tls">
+    <%= case account_config.auth_over_tls
+        when 'start_tls'
+          t 'labels.start_tls', "StartTLS"
+        when 'simple_tls'
+          t 'labels.simple_tls', "Simple TLS"
+        else
+          t 'labels.no_tls', "No TLS"
+        end
+     %></span>
   </td>
 </tr>
 <tr>
