require name when editing profile
fixes #9890

Test plan:
  * edit a user's profile
  * delete the name
  * you should see an error about the name

Change-Id: I05a3ad4ecd429c5e6563574e92571ae59100f0a6
Reviewed-on: https://gerrit.instructure.com/12942
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -22,7 +22,7 @@
           <span class="hide-if-editing"><%= @user_data[:short_name] %></span>
         </h1>
         <% if @user_data[:can_edit] %>
-          <label class="show-if-editing"><%= t('name', 'Name') %>: <br><input type="text" name="user[short_name]" value="<%= @user_data[:short_name] %>"></label>
+          <label class="show-if-editing"><%= t('name', 'Name') %>: <br><input type="text" name="user[short_name]" value="<%= @user_data[:short_name] %>" required></label>
         <% end %>
         <p>
           <span class="hide-if-editing"><%= @user_data[:title] %></span>
