scroll long event descriptions in calendar2. fixes #9774
previously, descriptions longer than 177px in calendar2 events
were overflowing beyond the modal onto the page. this fix adds a
scrollbar for those descriptions.

test plan:
  * create an assignment with a really long description and a due date
    (so it shows up in calendar2);
  * as a user in the same class as the assignment, visit the calendar2
    page and click on the assignment;
  * verify that the description is scrollable and does not overflow
    beyond the modal.

Change-Id: I6522f4712b31a879473bc63066cbd4854731b3b9
Reviewed-on: https://gerrit.instructure.com/12954
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -165,6 +165,9 @@
   font-size: 0.8em
   font-style: italic
   color: #666
+.event-detail-overflow
+  height: 177px
+  overflow-y: scroll
 
 .x-close-link
   padding-right: 5px
