rename 'edit profile' button to 'edit settings'
fixes #9869

Test plan:
  * go to the profile settings page
  * make sure the edit button in the right sidebar says 'edit settings'

Change-Id: I7362197618080af174f80c3e3059dabb499c8631
Reviewed-on: https://gerrit.instructure.com/12955
Reviewed-by: Jon Jensen <jon@instructure.com>
Tested-by: Bryan Madsen <bryan@instructure.com>

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -7,7 +7,7 @@
   <%= render :partial => "ways_to_contact" %>
   <div class="rs-margin-lr">
     <hr />
-    <a href="#" class="edit_profile_link button button-sidebar-wide"><%= image_tag "edit.png" %> <%= t('links.edit_profile', "Edit Profile") %></a>
+    <a href="#" class="edit_profile_link button button-sidebar-wide"><%= image_tag "edit.png" %> <%= t('links.edit_settings', "Edit Settings") %></a>
     <% mfa_settings = @user.mfa_settings %>
     <% if mfa_settings != :disabled %>
       <a href="<%= otp_login_path %>" class="button button-sidebar-wide"><%= image_tag "lock.png" %> <%= @user.otp_secret_key ? t('links.reconfigure_mfa', "Reconfigure Multi-Factor Authentication") : t('links.configure_mfa', "Set Up Multi-Factor Authentication") %></a>
