--- a/app/views/courses/settings.html.erb
+++ b/app/views/courses/settings.html.erb
@@ -566,7 +566,7 @@ Hashtags should consist of letters, numbers, dashes and underscores (no spaces).
   </div>
 <% end %>
 <script>
-  var sisPublishEnabled = "<%= publishing_enabled %>";
+  var sisPublishEnabled = <%= publishing_enabled %>;
 </script>
 <div id="edit_letter_grades_form" style="display: none;" data-context_code="<%= @context.asset_string %>">
   <%= render :partial => "shared/grading_standard", :object => @context.grading_standard %>
