updated social icons fixes #9857
- moved generic "contact" method icon to "message"
- added a google docs logo

facebook used to be in the 0x0 position, making
any services without an icon default to the
facebook logo, now it defaults to the message
logo which is better until we have an icon for
everything

Change-Id: I05378295dcfc4f86ab865ada838c77e321414cc4
Reviewed-on: https://gerrit.instructure.com/12984
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/profile/show.sass
+++ b/app/stylesheets/profile/show.sass
@@ -93,14 +93,19 @@
       display: block
 
 .message
-  background-position: -34px 0
-  &:hover
-    background-position: -34px -32px
-
-.facebook
   background-position: 0 0
   &:hover
     background-position: 0 -32px
+
+.google_docs
+  background-position: -296px 0
+  &:hover
+    background-position: -296px -32px
+
+.facebook
+  background-position: -228px 0
+  &:hover
+    background-position: -228px -32px
 
 .twitter
   background-position: -34px 0
@@ -127,8 +132,4 @@
   &:hover
     background-position: -193px -32px
 
-.message
-  background-position: -228px 0
-  &:hover
-    background-position: -228px -32px
 
