add 'http' to profile links w/o it fixes #9848
when the profile links are rendered they are now
checked for a simple schema, the check is very
loose so people can add tel:// file:// etc.

if there is no schema, http:// gets added to it

Change-Id: I68ad3d83d459916a25941fbf7d2803a68c5bf40b
Reviewed-on: https://gerrit.instructure.com/12987
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -100,7 +100,7 @@
         <% if @user_data[:links].length > 0 %>
           <ul>
             <% @user_data[:links].each do |link| %>
-              <li><a href="<%= link[:url] %>"><%= link[:title] %></a></li>
+              <li><a href="<%= add_uri_scheme_name(link[:url]) %>"><%= link[:title] %></a></li>
             <% end %>
           </ul>
         <% else %>
