htmlify bio at display time, fixes #10026
convert line breaks, links etc.

test plan:
1. edit to your profile bio
2. put in some breaks and links
3. after saving, the formatting and links should be preserved
4. if you edit again, it should be exactly as it was

Change-Id: I294a3a593260c8b52720e7f272017139578b8031
Reviewed-on: https://gerrit.instructure.com/13007
Reviewed-by: Zach Wily <zach@instructure.com>
Tested-by: Bryan Madsen <bryan@instructure.com>

--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -68,7 +68,7 @@
   <div class="v-gutter">
     <h2 class="border border-b"><%= t :bio, "Bio" %></h2>
     <% if @user_data[:bio] %>
-      <div class="hide-if-editing"><%= @user_data[:bio] %></div>
+      <div class="hide-if-editing"><%= raw format_message(@user_data[:bio]).first %></div>
     <% else %>
       <p class="hide-if-editing"><%= t('user_has_no_bio', "%{user} hasn't added a bio", :user => @user_data[:short_name]) %></p>
     <% end %>
