Support new js tooltip on Notifications page. Closes #10027
Use the new jQuery 1.9 tooltip code on the /profile/communication
(i.e. Notifications) page.

Testing Plan:
==========
* Open the /profile/communication page
* Mouse over the buttons for ASAP, Daily, Weekly, Never
  and verify that the descriptive text shows up in a
  javascript tooltip above the button.

Change-Id: Ib14fd3c544088cc44e80c3b1b33131d636827957
Reviewed-on: https://gerrit.instructure.com/13009
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/views/jst/profiles/notifications/_policy_cell.handlebars
+++ b/app/views/jst/profiles/notifications/_policy_cell.handlebars
@@ -18,7 +18,7 @@
       <div class="btn-group-was event-option-buttons">
         {{#each allButtons}}
         <input type="radio" class="{{code}}-button frequency" id="{{id}}" name="{{coordinate}}" title="{{title}}" data-value='{{code}}' {{#if active}}checked='checked'{{/if}}>
-        <label for="{{id}}" class="{{code}}-label">{{title}}</label>
+        <label for="{{id}}" class="{{code}}-label" data-tooltip >{{title}}</label>
         {{/each}}
       </div>
     {{/if}}
