Display bootstrap-style popover on notifications page. Closes #10055
Made popover styles part of general styles. Added example to stylesheet page.

Testing Plan
==========
* Visit /profile/communication page
* Verify that a twitter-bootstrap style popover displays on hover of category name
  http://twitter.github.com/bootstrap/javascript.html#popovers
* Verify appears correctly on /stylesheet page

Change-Id: I336a066c86f832e5cec3f1108da77d49692b2b12
Reviewed-on: https://gerrit.instructure.com/13038
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Zach Pendleton <zachp@instructure.com>

--- a/app/stylesheets/bootstrap_parts/_main.scss
+++ b/app/stylesheets/bootstrap_parts/_main.scss
@@ -21,7 +21,7 @@
 
 // Components: Popovers
 //@import "bootstrap/tooltip"; //want
-//@import "bootstrap/popovers"; //want
+@import "popovers";
 
 
 @import "overrides";
