--- a/app/stylesheets/notification_preferences.sass
+++ b/app/stylesheets/notification_preferences.sass
@@ -20,8 +20,6 @@ $hover_row: #F5F5F5
   .notification-prefs-table
     border: 1px solid #DDD
     border-collapse: separate
-    -webkit-border-radius: 4px
-    -moz-border-radius: 4px
     border-radius: 4px
 
     caption
@@ -76,6 +74,7 @@ $hover_row: #F5F5F5
     td.comm-event
       font-size: 1.1em
       vertical-align: bottom
+      position: relative
 
       div.row-title-cell
         position: relative
