--- a/app/views/info/styleguide.html.erb
+++ b/app/views/info/styleguide.html.erb
@@ -1375,5 +1375,12 @@
     </button>
   </section>
 
+  <section>
+    <h2>Popovers</h2>
+    This is an example of a popover. Currently on "left" pointing is supported:<br/>
+    <a class='category-name show-popover' title="<div class='arrow'></div><div class='popover-title'>Popover Example</div><div class='popover-content'><p>Some content to display.</p></div>">
+      Text with popover
+    </a>
+  </section>
 
 </div>
