--- a/app/views/jst/profiles/notification_preferences.handlebars
+++ b/app/views/jst/profiles/notification_preferences.handlebars
@@ -16,7 +16,7 @@
     <tr>
       <td class='comm-event'>
         <div class='row-title-cell'>
-          <span class='category-name show-popover' title="{{description}}" data-content="{{description}}">
+          <span class='category-name show-popover' title="<div class='arrow'></div><div class='popover-title'>{{ title }}</div><div class='popover-content'><p>{{description}}</p></div>">
             {{title}}
           </span>
           {{#if checkName }}
